--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,32 +1,14 @@
 FROM node:18-alpine
 LABEL maintainer="Cato Yeung"
 
-ENV PYTHONUNBUFFERED 1
-
-COPY ./requirements.txt /tmp/requirements.txt
-COPY ./requirements.dev.txt /tmp/requirements.dev.txt
-COPY ./app /app
 WORKDIR /app
-EXPOSE 3000
-EXPOSE 8000
 
-ARG DEV=false
-RUN python -m venv /py && \
-    /py/bin/pip install --upgrade pip && \
-    apk add --update --no-cache postgresql-client && \
-    apk add --update --no-cache --virtual .tmp-build-deps \
-        build-base postgresql-dev musl-dev && \
-    /py/bin/pip install -r /tmp/requirements.txt && \
-    if [ $DEV = "true" ]; \
-        then /py/bin/pip install -r /tmp/requirements.dev.txt ; \
-    fi && \
-    rm -rf /tmp && \
-    apk del .tmp-build-deps && \
-    adduser \
-        --disabled-password \
-        --no-create-home \
-        django-user
+COPY ./frontend/package.json ./
+RUN npm install
 
-ENV PATH="/py/bin:$PATH"
+COPY ./ ./
 
-USER django-user
+RUN npm run build # will build remix app
+ENV NODE_ENV=development
+
+CMD ["npm", "run" ,"dev"]
