--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,7 +24,7 @@ Pillow>=10.0.0,<11.0.0
 
 django-apscheduler>=0.4.1,<0.5
 
-opencv-python>=4.8.1.78,<4.9
+opencv-python>=4.6.0.66,<4.7
 python-bidi>=0.4.2,<0.5
 reportlab>=4.0.5,<4.1
 lxml>=4.9.3,<4.10
@@ -45,3 +45,6 @@ Werkzeug>=3.0.1,<3.1
 jinja2>=3.1.2,<3.2
 
 natsort>=8.4.0,<9.0
+
+paddleocr>=2.7.0.3,<2.8
+paddlepaddle-gpu>=2.5.2,<2.6
