--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -51,3 +51,21 @@ paddlepaddle-gpu>=2.5.2,<2.6
 
 six>=1.16.0,<1.17
 APScheduler>=3.10.4,<3.11
+numpy>=1.26.2,<1.27
+packaging>=23.2,<24.0
+requests>=2.31.0,<2.32
+sympy>=1.12,<1.13
+decorator>=5.1.1,<5.2
+google-api-python-client>=2.108.0,<2.109
+inflection>=0.5.1,<0.5.2
+PyTAML>=6.0.1,<6.1
+httpx>=0.25.2,<0.26
+opt_einsum>=3.3.0,<3.4
+astor>=0.8.1,<0.9
+shapely>=2.0.2,<2.1
+pyclipper>=1.3.0,<1.4
+scikit-image>=0.22.0,<0.23
+imgaug>=0.4.0,<0.5
+lmdb>=1.4.1,<1.5
+tqdm<=4.66.1,<4.67
+markupsafe>=2.1.3,<2.2
