--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -69,3 +69,7 @@ imgaug>=0.4.0,<0.5
 lmdb>=1.4.1,<1.5
 tqdm<=4.66.1,<4.67
 markupsafe>=2.1.3,<2.2
+defusedxml>=0.7.1,<0.8
+unidecode>=1.3.7,<1.4
+mplcursors>=0.5.2,<0.6
+weasyprint>=60.1,<61.0
