--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "global": "^4.4.0",
     "immer": "^10.0.2",
     "moment": "^2.29.4",
     "next": "13.4.1",
