--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@dorbus/flexboard": "^1.1.2",
     "@loadable/component": "^5.15.3",
     "@uiw/react-textarea-code-editor": "^2.1.9",
     "ag-grid-community": "^30.0.3",
