--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ django-rest-auth>=0.9.5,<1.0
 djangorestframework-simplejwt>=5.2.2,<5.3.0
 django-allauth>=0.54.0,<0.55
 djangorestframework-camel-case>=1.4.2,<1.5.0
+django-environ>=0.11.2,<0.12
 
 country-list>=1.0.0,<1.1.0
 
