Checked in on 23/01/2024

--- a/backend/backend/.env.sample
+++ b/backend/backend/.env.sample
@@ -4,7 +4,7 @@ DB_NAME=docparser
 DB_USER=postgres
 DB_PASSWORD=Aa123456
 
-ALLOWED_HOSTS=backend,127.0.0.1
+ALLOWED_HOSTS=backend,127.0.0.1,localhost
 
 SECRET_KEY=CASHEW
 
