--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,12 +27,14 @@
     "next-remove-imports": "^1.0.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-bootstrap-daterangepicker": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-dropzone": "^14.2.3",
     "react-image-crop": "^10.1.5",
     "react-select": "^5.7.3",
     "react-zoom-pan-pinch": "^3.3.0",
+    "recharts": "^2.12.0",
     "rehype-prism-plus": "^1.6.3",
     "rehype-rewrite": "^4.0.0",
     "sass": "^1.63.6",
