--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "moment": "^2.29.4",
     "next": "13.4.1",
     "next-remove-imports": "^1.0.12",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^9.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-daterangepicker": "^8.0.0",
