--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,8 @@ djangorestframework-simplejwt>=5.2.2,<5.3.0
 django-allauth>=0.54.0,<0.55
 djangorestframework-camel-case>=1.4.2,<1.5.0
 django-environ>=0.11.2,<0.12
+django-sesame>=3.2.2,<3.3
+websockets>=12.0,<13.0
 
 country-list>=1.0.0,<1.1.0
 
@@ -18,7 +20,8 @@ ptvsd>=4.3.2,<4.4.0
 pdf2image>=1.16.3,<1.17.0
 PyPDF2>=3.0.1,<3.1
 pdfminer>=20191125
-pymupdf>=1.19.5,<1.20
+pymupdf>=1.23.26,<1.24
+#pymupdf>=1.19.5,<1.20
 pyzbar>=0.1.9,<0.2
 
 Pillow>=10.0.0,<11.0.0
