--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "ag-grid-react": "^30.0.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "crypto-js": "^4.2.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "global": "^4.4.0",
