Modified for Indian Case

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -59,6 +59,9 @@ imutils>=0.5.4,<0.6
 
 drf-access-policy>=1.5.0,<1.6.0
 
+openai
+munch
+
 #six>=1.16.0,<1.17
 #numpy>=1.26.2,<1.27
 #packaging>=23.2,<24.0
