--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -62,6 +62,8 @@ drf-access-policy>=1.5.0,<1.6.0
 openai
 munch
 
+ocrmac>=0.1.6,<0.2
+
 #six>=1.16.0,<1.17
 #numpy>=1.26.2,<1.27
 #packaging>=23.2,<24.0
